[FIX]: cors 2